--- a/index.html
+++ b/index.html
@@ -83,22 +83,39 @@
                 <ul class="botones fila">
                     <li><button>Nuestros Juegos</button></li>
                     <li><button>Juegos del mes</button></li>
-                </lu>
+                </ul>
             </div>
     </section><!-- banner -->
 
     <section id="juego-mes">
-        <h1>Juego recomendado</h2>
+        <div class="contenedor">
+            <div class="fila">
+                <div class="titulo-juego">
+                    <h1>Juego recomendado</h1>
+                </div>
 
+                <div class="descripcion-juego">
+                    <div class="fila">
 
-        <div class="descripcion-juego">
-            <div class="enunciado-juego">
-                <h2>Carcassone</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima at tempora hic quidem expedita modi odit esse. Eius, architecto beatae.</p>
-            </div>
+                        <div class="imagen-juego">
+                            <img src="./img/carcassone.jpg" alt="Carcassone">
+                            <div class="imagen-juego-leyenda">
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia impedit nulla minus sequi corporis tenetur.</p>
+                            </div>
+                        </div>
 
-            <div class="imagen-juego">
-                <img src="./img/carcassone.jpg" alt="Carcassone">
+                        <div class="enunciado-juego">
+                            <h2>Carcassone</h2>
+                            <p>Lorem ipsum dolor sit amet,
+                                 consectetur adipisicing elit.
+                                 Minima at tempora hic quidem expedita
+                                  modi odit esse. Eius, architecto beatae.</p>
+                            <div class="saber-mas">
+                                <button>Saber más</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section><!-- juego del mes -->
