--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <header id="barra-superior">
         <div class="contenedor">
             <ul class="fila">
-                <li class="ubicacion">
+                <li class="ubicacion columna">
                     <a href="https://goo.gl/maps/8Wmpt4UAubmd2VRy5" target="_blank">
-                        <i class="fa-solid fa-location-dot"></i>  Av Daniel Hernandez 291, San Isidro
+                        <i class="fa-solid fa-location-dot"></i>  Av. D. Hernandez 291
                     </a>
                 </li>
 
-                <li class="contactos">
+                <li class="contactos columna">
                     <a href="https://api.whatsapp.com/send/?phone=51960192049&text=Hola+Dia-D+juegos&type=phone_number&app_absent=0" target="_blank">
                         <i class="fa-solid fa-phone"></i>  960192049
                     </a>
 
                     <a href="https://goo.gl/maps/8Wmpt4UAubmd2VRy5" target="_blank">
-                        <i class="fa-solid fa-envelope"></i>  ventas@diadejuegos.com
+                        <i class="fa-solid fa-envelope"></i>  ventas@chitclub.com
                     </a>
                 </li>
 
-                <li class="redes-sociales">
+                <li class="redes-sociales columna">
                     <a href="https://www.facebook.com/diadjuegosdemesayrol/?locale=es_LA" target="_blank">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
