--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a href="https://goo.gl/maps/8Wmpt4UAubmd2VRy5" target="_blank">
                         <i class="fa-solid fa-location-dot"></i>  Av. D. Hernandez 291
                     </a>
-                </li>
+                </li><!-- ubicacion -->
 
                 <li class="contactos columna">
                     <a href="https://api.whatsapp.com/send/?phone=51960192049&text=Hola+Dia-D+juegos&type=phone_number&app_absent=0" target="_blank">
@@ -26,7 +26,7 @@
                     <a href="https://goo.gl/maps/8Wmpt4UAubmd2VRy5" target="_blank">
                         <i class="fa-solid fa-envelope"></i>  ventas@chitclub.com
                     </a>
-                </li>
+                </li><!-- contactos -->
 
                 <li class="redes-sociales columna">
                     <a href="https://www.facebook.com/diadjuegosdemesayrol/?locale=es_LA" target="_blank">
@@ -38,9 +38,9 @@
                     <a href="https://www.youtube.com/c/diadjuegos" target="_blank">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
-                </li>
-            </ul>
-        </div>
+                </li><!-- redes-sociales -->
+            </ul><!-- fila -->
+        </div><!-- contenedor -->
     </header><!-- barra superior -->
 
     <header id="cabecera" class="espaciado">
@@ -62,7 +62,7 @@
                             <li><a href="#">Acerca de</a></li>
                         </div>
                     </ul> <!-- menu opciones -->
-                </div>
+                </div><!-- fila -->
             </nav> <!-- barra de navegacion -->
         </div> <!-- contenedor -->
     </header><!-- cabecera -->
@@ -83,8 +83,8 @@
                 <ul class="botones fila">
                     <li><button>Nuestros Juegos</button></li>
                     <li><button>Juegos del mes</button></li>
-                </ul>
-            </div>
+                </ul><!-- botones -->
+            </div><!-- contenedor-banner -->
     </section><!-- banner -->
 
     <section id="juego-mes">
@@ -102,7 +102,7 @@
                             <div class="imagen-juego-leyenda">
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia impedit nulla minus sequi corporis tenetur.</p>
                             </div>
-                        </div>
+                        </div><!-- imagen-juego -->
 
                         <div class="enunciado-juego">
                             <h2>Carcassone</h2>
@@ -112,13 +112,13 @@
                                   modi odit esse. Eius, architecto beatae.</p>
                             <div class="saber-mas">
                                 <button>Saber más</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section><!-- juego del mes -->
+                            </div><!-- saber-mas -->
+                        </div><!-- enunciado-juego -->
+                    </div><!-- fila -->
+                </div><!-- descripcion-juego -->
+            </div><!-- fila -->
+        </div><!-- contenedor -->
+    </section><!-- juego-mes -->
     
 </body>
 </html>
